--- a/train.html
+++ b/train.html
@@ -33,27 +33,13 @@
 						<td>1:30 PM</td>
 						<td>17</td>
 					</tr>
-					<tr>
-						<td>East Corridor</td>
-						<td>NYC</td>
-						<td>30</td>
-						<td>1:30 PM</td>
-						<td>17</td>
-					</tr>
-					<tr>
-						<td>East Corridor</td>
-						<td>NYC</td>
-						<td>30</td>
-						<td>1:30 PM</td>
-						<td>17</td>
-					</tr>
 				</tbody>
 			</table>
 		 </div>
 
 
 
-		 <div id="tableHeader"><p>Add Train</p></div>
+		 <div id="tableHeader"><p>Add A Train</p></div>
 
 		 <div class="time"><p>Current Time</p><span id="currentTime">00:00</span></div>
 
@@ -67,7 +53,7 @@
 					</div>
 					<div class="form-group">
 						<label>Destination</label>
-						<input type="text" id="Destination" class="form-control" placeholder="NYC-Trenton">
+						<input type="text" id="destination" class="form-control" placeholder="NYC-Trenton">
 					</div>
 					<div class="form-group">
 						<label>First Train Time (HH:mm - Military Time)</label>
@@ -75,12 +61,12 @@
 					</div>
 					<div class="form-group">
 						<label>Frenquency (Minutes)</label>
-						<input type="text" id="frequency" class="form-control" placeholder="35">
+						<input type="text" id="frequency" class="form-control" placeholder="30">
 					</div>
 					
 					
 					<div class="form-group text-center">
-						<button class="btn btn-primary">
+						<button class="btn btn-primary" id="submit">
 							Submit
 						</button>
 					</div>
