--- a/train.html
+++ b/train.html
@@ -41,7 +41,7 @@
 
 		 <div id="tableHeader"><p>Add A Train</p></div>
 
-		 <div class="time"><p>Current Time</p><span id="currentTime">00:00</span></div>
+		 <div class="time"><p>Current Time</p><span id="currentTime"></span></div>
 
 		 <form>
 		 	<div class="row">
@@ -82,7 +82,7 @@
 </div>
 </body>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
+<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
 
 <script src="https://code.jquery.com/jquery.js"></script>
